8041434: Add synchronization to the common global constants structure
Reviewed-by: attila, hannesw